# UPI_Expense_Tracker

./: .env.example  .gitignore  glossary.md  main.py  pyproject.toml  requirement.md  requirements.txt
converters/: __init__.py  base.py  gpay.py  phonepe.py
core/: processor.py  tagging.py
docs/: FRONTEND_STRUCTURE.md
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.tsx  AppShell.tsx  Dashboard.tsx  LandingPage.tsx  LoginModal.tsx  TaggingView.tsx  index.css
frontend/src/auth/: demoCredentials.ts
frontend/src/components/: ConfirmDialog.tsx  FilterSidebar.tsx  StepTabs.tsx  UploadSection.tsx
frontend/src/context/: WorkflowContext.tsx
frontend/src/dashboard/: DashboardGranularityBar.tsx  DashboardHome.tsx  granularity.ts
frontend/src/email/: EmailIntegration.tsx  bankConfig.ts
frontend/src/realtime/: RealtimeUpdates.tsx
frontend/src/tagging/: TaggingView.tsx
frontend/src/types/: transaction.ts
utils/: __init__.py  logger.py
