[project]
name = "paytm-analysis-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "openpyxl==3.1.2",
    "pandas==2.1.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "spacy>=3.8.11",
    "uvicorn>=0.42.0",
    "xlsxwriter>=3.2.9",
]
